[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://bogen_glitch_smaller_start.png" type="Texture" id=2]
[ext_resource path="res://Sprites/tooth walker/tooth walker sprite-Sheet_fixed.png" type="Texture" id=3]
[ext_resource path="res://sounds/hit.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/reflect.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/ability.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/exit.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/key.wav" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=3]
radius = 31.9139

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( -10, -40, 15, -30, 40, 0, 15, 30, -10, 40, 0, 0 )

[sub_resource type="Animation" id=5]
length = 0.55
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.5, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.5, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "Death"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Animations:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 19 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Animations:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Walking"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Animations:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;

uniform float lightFactor = 1;

void fragment(){
  COLOR = texture(TEXTURE, UV);
  COLOR = COLOR * lightFactor;
}"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )
shader_param/lightFactor = 1.0

[node name="Player" type="KinematicBody2D"]
z_index = 4096
collision_layer = 5
collision_mask = 5
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = -150.0
margin_top = -70.0
margin_right = 150.0
margin_bottom = -20.0

[node name="Label" type="Label" parent="CenterContainer"]
margin_left = 150.0
margin_top = 18.0
margin_right = 150.0
margin_bottom = 32.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
uppercase = true

[node name="MessageDisplayTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="AttackCone" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackCone"]
position = Vector2( 50, 0 )
shape = SubResource( 4 )
disabled = true

[node name="Sprite" type="Sprite" parent="AttackCone"]
visible = false
position = Vector2( 65, 0 )
scale = Vector2( 1, 1.5 )
texture = ExtResource( 2 )
hframes = 5
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="AttackCone"]
anims/Bogen = SubResource( 5 )

[node name="ConeCooldownTimer" type="Timer" parent="AttackCone"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 7 )
anims/Idle = SubResource( 6 )
anims/Walking = SubResource( 8 )

[node name="Animations" type="Sprite" parent="."]
material = SubResource( 10 )
position = Vector2( -10.2384, -8.81639 )
scale = Vector2( 1.81765, 1.80876 )
texture = ExtResource( 3 )
vframes = 5
hframes = 6

[node name="AudioHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="AudioReflect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="AudioAbility" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="AudioExit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="AudioKey" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
[connection signal="timeout" from="MessageDisplayTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="AttackCone/ConeCooldownTimer" to="." method="_on_ConeCooldownTimer_timeout"]
